change mobile version width version 7

--- a/src/components/Description/Description.scss
+++ b/src/components/Description/Description.scss
@@ -192,7 +192,7 @@
     background-image: none;
   }
   .first-section {
-    max-width: 395px;
+    max-width: 410px;
     background-color: #edecea;
     background-image:  url("../../assets/Banner_photo.jpg");
     background-repeat: no-repeat, repeat;
@@ -220,7 +220,7 @@
   }
 
   .second-section {
-    max-width: 395px;
+    max-width: 410px;
     display: flex;
     flex-direction: column;
     padding-top: 73px;
@@ -246,7 +246,7 @@
       padding-right: 19px;
     }
     h3 {
-      margin: 0 40px 4px;
+      margin-left: 0;
     }
     p {
       max-width: 20.5rem;
