--- a/src/components/Registration/Registration.scss
+++ b/src/components/Registration/Registration.scss
@@ -413,7 +413,7 @@ input{
     h2 {
       max-width: 18rem;
       padding-top: 145px;
-      padding-left: 35px;
+      margin: 0 auto;
     }
     h3 {
       padding-left: 16px;
@@ -424,13 +424,14 @@ input{
     max-width: 350px;
   }
   form .main-input {
-    max-width: 20.5rem;
+    max-width: 24rem;
     padding-left: 10px;
     margin-left: 7px;
 
   }
   form .main-input-error {
-    max-width: 20rem;
+    max-width: 24rem;
+    margin-left: 7px;
   }
   form .main-input-label {
     padding-left: 12px;
@@ -449,7 +450,7 @@ input{
   }
 
   .upload-label {
-    max-width: 228px;
+    max-width: 268px;
     padding-left: 23px;
     height: 26.5px;
   }
@@ -460,7 +461,7 @@ input{
   }
 
   .signup-form-btn {
-    margin-left: 105px;
+    margin-left: auto;
     margin-bottom: 148px;
   }
 
