--- a/src/components/Description/Description.scss
+++ b/src/components/Description/Description.scss
@@ -192,7 +192,7 @@
     background-image: none;
   }
   .first-section {
-    max-width: 410px;
+    max-width: 400px;
     background-color: #edecea;
     background-image:  url("../../assets/Banner_photo.jpg");
     background-repeat: no-repeat, repeat;
@@ -220,7 +220,7 @@
   }
 
   .second-section {
-    max-width: 410px;
+    max-width: 400px;
     display: flex;
     flex-direction: column;
     padding-top: 73px;
@@ -246,7 +246,8 @@
       padding-right: 19px;
     }
     h3 {
-      margin-left: 0;
+      width: 307px;
+      padding-right: 38px;
     }
     p {
       max-width: 20.5rem;
