--- a/src/components/Description/Description.scss
+++ b/src/components/Description/Description.scss
@@ -235,6 +235,7 @@
 
   .description-block-2 {
     text-align: left;
+    justify-content: left;
     max-width: 29.81rem;
     padding-bottom: 65px;
     display: flex;
@@ -246,8 +247,8 @@
       padding-right: 19px;
     }
     h3 {
-      width: 307px;
-      padding-right: 48px;
+      padding-right: 39px;
+      padding-left: 0;
     }
     p {
       max-width: 20.5rem;
